[package]
name = "my-threadsafe-filter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.10.0", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rayon = "1"
num_cpus = "1.16.0"
once_cell = "1.21.3"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
